[gd_scene load_steps=10 format=3 uid="uid://b4so7jrf5f1qb"]

[ext_resource type="Script" path="res://src/ui/visuals/visuals_blight_ritual.gd" id="1_xybjn"]
[ext_resource type="SpriteFrames" uid="uid://bbwnb31h3v566" path="res://src/animation/blight/blight_spike_sf.tres" id="2_dqy37"]
[ext_resource type="Texture2D" uid="uid://c1nxym5nkixkj" path="res://assets/animation/death.png" id="3_p7q0o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mxp5v"]
atlas = ExtResource("3_p7q0o")
region = Rect2(0, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp2xw"]
atlas = ExtResource("3_p7q0o")
region = Rect2(112, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_phwii"]
atlas = ExtResource("3_p7q0o")
region = Rect2(224, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qanv"]
atlas = ExtResource("3_p7q0o")
region = Rect2(336, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1xu6"]
atlas = ExtResource("3_p7q0o")
region = Rect2(448, 0, 112, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_cpawi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxp5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp2xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phwii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qanv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1xu6")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="VisualsBlightRitual" type="Node2D"]
script = ExtResource("1_xybjn")

[node name="BlightSpike" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(509, 111)
scale = Vector2(7, 7)
sprite_frames = ExtResource("2_dqy37")
frame = 3
frame_progress = 1.0
centered = false

[node name="WhiteSquare" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2

[node name="Explosion" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(521, 332)
scale = Vector2(5.7, 5.7)
sprite_frames = SubResource("SpriteFrames_cpawi")
frame = 5
frame_progress = 1.0
